<resources>
    <string name="app_name">OrganizerApp</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Organize_your_day">Organize your day!</string>
    <string name="my_list">My Lists</string>
    <string name="daily_tasks">Daily Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="menu_my_list">My Lists</string>
    <string name="menu_daily_tasks">Daily Tasks</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_tomato_stats">Tomato Stats</string>
    <string name="tomato_stats">Tomato Stats</string>
    <string name="log_out">Log out</string>
    <string name="welcome_thank_you_for_registering">Welcome, thank you for registering!</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="delete">Delete List</string>
    <string name="title">Title</string>
    <string name="list">List</string>
</resources>