<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_daily_tasks">


    <fragment
        android:id="@+id/nav_daily_tasks"
        android:name="com.example.organizerapp.ui.dailyTasks.DailyTasksFragment"
        android:label="@string/menu_daily_tasks"
        tools:layout="@layout/fragment_daily_tasks" />

    <fragment
        android:id="@+id/nav_my_list"
        android:name="com.example.organizerapp.ui.myLists.MyListsFragment"
        android:label="@string/menu_my_list"
        tools:layout="@layout/fragment_my_lists" />


    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.organizerapp.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_tomato_stats"
        android:name="com.example.organizerapp.ui.tomatoStats.TomatoStatsFragment"
        android:label="@string/menu_tomato_stats"
        tools:layout="@layout/fragment_tomato_stats" />


</navigation>