<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        android:layout_width="367dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.022"
        app:layout_constraintVertical_chainStyle="spread"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/username"
            android:layout_width="328dp"
            android:layout_height="59dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:textColorHint="#8A8888"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="362dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
        app:layout_constraintVertical_bias="0.126"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/PrimaryColor"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="326dp"
            android:layout_height="64dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColorHint="#FF8A8888"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:text="@string/log_in"
        app:backgroundTint="#94B19C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername" />

    <Button
        android:id="@+id/forgot"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:background="@drawable/button_border"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:backgroundTint="#00FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <Button
        android:id="@+id/signup"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:background="@drawable/button_border"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/forgot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="215dp"
        android:layout_height="193dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        app:srcCompat="@drawable/organizer_logo" />

    <TextView
        android:id="@+id/organizer"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:text="o  r  g  a  n  i  z  e  r"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />


</androidx.constraintlayout.widget.ConstraintLayout>